--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
